Fix stretch/shrink behaviour

--- a/apps/lite/ui/src/routes/project/$id/workspace/OutlineTree/OutlineTree.module.css
+++ b/apps/lite/ui/src/routes/project/$id/workspace/OutlineTree/OutlineTree.module.css
@@ -22,7 +22,10 @@
 }
 
 .uncommittedChangesPanel {
+	/* Stretch/shrink single child element to fit this element. */
 	display: grid;
+	grid-template-rows: minmax(0, 1fr);
+	grid-template-columns: minmax(0, 1fr);
 }
 
 .uncommittedChangesContainer {
